# AI-Intervene-Training-Material

./: .gitignore  pyproject.toml
BioacousticsAI/: Notebook.ipynb  audio_utils.py  evaluation_utils.py  plotting_utils.py  setup.sh
CameraTrapsAI/: AI_Intervene_Camera_Traps.ipynb  colab_utils.py  ct_notebook_setup.sh  ct_notebook_utils.py
