[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.12"
dependencies = [
  "absl-py==1.4.0",
  "batdetect2==1.0.8",
  "folium==0.20.0",
  "geopandas==1.1.1",
  "google-colab",
  "httplib2>=0.31.0",
  "ipython==7.34.0",
  "ipywidgets==7.7.2",
  "jupyter>=1.1.1",
  "keras==3.10.0",
  "librosa==0.11.0",
  "matplotlib==3.10.0",
  "numpy==2.0.2",
  "pandas==2.2.2",
  "pillow==11.3.0",
  "plotly==5.24.1",
  "pyarrow==18.1.0",
  "seaborn==0.13.2",
  "setuptools==75.2.0",
  "tensorflow==2.19.0",
  "tensorflow-hub==0.16.1",
  "tf-keras==2.19.0",
  "torch==2.8.0",
  "torchaudio==2.8.0",
  "torchvision==0.23.0",
  "traitlets==5.7.1",
  "umap-learn==0.5.9.post2",
  "wavio>=0.0.9",
  "xarray==2025.10.1",
]

[dependency-groups]
dev = [
  "black>=25.9.0",
  "catppuccin-jupyterlab>=0.2.4",
  "isort>=6.0.1",
  "jupyterlab>=4.4.7",
  "jupyterlab-code-formatter>=3.0.2",
  "jupyterlab-lsp>=5.2.0",
  "jupyterlab-spellchecker>=0.8.4",
  "jupyterlab-vim>=4.1.4",
  "pandas-stubs>=2.3.2.250926",
  "ruff>=0.13.1",
]

[tool.uv.sources]
google-colab = { git = "https://github.com/googlecolab/colabtools" }

[tool.ruff]
line-length = 79
